src/components/Home/about/about.css
.about-container {
    position: relative;
    flex-direction: column;
    width: 80%;
    margin: 5% auto;
    
    /* outline: dotted purple; */
}
.about-text {
    flex-direction: column;
    max-width: 580px;

    margin: 0 5%;
}
.about-text h1{
    color: #133995;
    font-weight: 500;
    margin-bottom: 0;
}

.glass {
    width: 100%;

    height: fit-content;
    flex-direction: row;

    justify-content: center;
    align-items: center;


    border-radius: 30px;
    border: solid 1px #D5EAFF;
    background-image: linear-gradient(
        to left, 
        rgb(19, 57, 149,0.2),
        rgb(213, 234, 255, 0.15));
    backdrop-filter: blur(5px);

    
}
.image-container {
    position: relative;
    justify-content: end;
    width: 70%;
    height: 300px;
    top: 150px;
    right: -10%;

    /* margin: 5% 5% 2%; */
    /* outline: dotted black; */
}
.image-container img {
    position: absolute;
    width: 100%;
    max-width: 800px;
    height: auto; 
}

.data{
    color: #001B69;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;

    /* height: 300px; */

    padding: 1% 5% 0% 60px;
    /* outline: solid salmon; */
}

ul.data li {
    display: flex;
    flex-direction: column;
    justify-content: center;
    /* align-items: center; */
    list-style-type: none;
    height: 130px;
    width: 300px;
    /* outline: dotted #133995; */
}
ul.data h2 {
    font-weight: 800;
    margin: 0;
}
/* ul.data li div {
    max-width: 50%;
    } */

.bg-snowflake {
    z-index: -1;
    position: absolute;
    rotate: calc(15deg);
    top: 15%;
    right: -1%;
    
}

